<?xml version="1.0"?>
<package format="2">
  <name>xela_models</name>
  <version>1.2.0</version>
  <description>The XELA Sensor Models</description>

  <maintainer email="matthias@xelarobotics.com">Matt</maintainer>
  <license>GPLv3</license>
  <url type="website">http://xelarobotics.com</url>
  <author email="matthias@xelarobotics.com">Matt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
